[package]
name = "gifed"
version = "0.3.0"
authors = ["gennyble <gen@nyble.dev>", "novedevo <devon@nove.dev>"]
edition = "2021"
license = "ISC"
description = "Gif encoding and decoding with fine control"
repository = "https://github.com/genuinebyte/gifed"

[dependencies]
bitvec = "1.0.1"
color_quant = "1.1.0"
rgb = { version = "0.8", optional = true }
weezl = "0.1.5"

[features]
weezl-encode = []
default = ["rgb"]

[dev-dependencies]
rand = "0.8.5"
